srv/static/main.css
html, body{
    overflow-x: hidden;
    margin: 0;
    padding: 0;
    font-family: 'DM Sans', sans-serif;
}

.content-container{
    padding: 1%;
    width: 80%;
    margin: 1rem auto;
    overflow-x: hidden;
    display: flex;
    flex-direction: column;
    max-width: 118.4rem;
}


.button{
    margin: 1.5% 0 1.5% 0;
    font-family: 'DM Sans', sans-serif;
    font-size: 20px;
    text-decoration: none;
    color: #c91818;
    border: 1px solid #c91818;
    background-color: transparent;
    border-radius: 8px;
    padding: 0.5rem 1rem;
    transition: border-color 0.2s, box-shadow 0.2s, transform 0.3s ease;
}

.button:hover{
    background-color: #c91818;
    box-shadow:  0 2px 4px rgba(255, 255, 255, 0.1);
    color: white;
    transform: translateY(-3px);
}


.button-secondary{
    color: #336791;
    border: 1px solid #007BFF;
}

.button-secondary:hover {
    background-color: #336791;
    color: antiquewhite;
    border: 1px solid #007BFF;
}


.content{
    display: flex;
    gap: 5%;
}

.left-content{
    width: 70%;
}

.right-content{
    width: 30%;
    text-align: center;
}

.sidebar{
    width: 80%;
    border: 0.5px solid rgb(197, 197, 197);
    border-radius: 8px;
    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
    display: flex;
    flex-direction: column;
    transition: transform 0.3s ease;
    padding: 1.5rem;
}

.image-container{
    width: 100%;
    height: 100%;
    overflow: hidden;
}

img{
    object-fit: cover;
    width: 100%;
    height: 100%;
}


table {
    width: 100%;
    border-collapse: collapse; /* Ensures borders are collapsed between cells */
}

th, td {
    /* border: 1px solid rgb(158, 158, 158); */
    padding: 8px;
    text-align: left;
}

th {
    background-color: white;
}

td {
    border-top: 1px solid rgb(191, 191, 191);
    border-bottom: 1px solid rgb(191, 191, 191);
    max-width: 200px;
}

.map-iframe {
    width: 100%; /* Let it fill the container */
    max-width: 800px; /* Bigger maximum width */
    height: 20rem; /* Increased height for better visibility */
    border: 1px solid rgb(0, 0, 0); /* Remove default border */
    border-radius: 12px; /* Match container's border-radius */
}

.map a {
    font-size: 18px; /* Larger font size for visibility */
    text-decoration: none; /* Remove underline */
    color: #007BFF; /* Blue color for link */
    transition: color 0.3s ease; /* Smooth transition for hover */
}

.map a:hover {
    color: #0056b3; /* Darker shade on hover */
}

/* global btns */
.main-btns {
    background: #336791;
    color: white;
    text-decoration: none;
    padding: 0.5rem 1rem;
}

.main-btns:hover {
    background: white;
    color: black;
}

/* Hide the up and down arrows in WebKit browsers (Chrome, Safari, Opera, Edge) */
input[type="number"]::-webkit-outer-spin-button,
input[type="number"]::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

@media (max-width: 420px) {
    .countDown {
        grid-template-columns: repeat(2, 1fr) !important;
    }
}

@media (max-width: 1600px) {

    .map iframe {
        width: 100%; /* Make the map take full width on small screens */
        height: 200px; /* Reduce the map height for smaller screens */
    }

    .image-container img {
        width: 100%; /* Ensure the image fits the container */
        max-width: 180px; /* Limit image size */
    }

    .venue a {
        font-size: 14px; /* Make the "Know more about venue" link smaller */
    }

}

@media (max-width: 1300px) {
    .map {
        width: 80%; /* Make the container width more responsive on tablets */
        padding: 15px; /* Adjust padding for smaller screens */
    }

    .map-iframe {
        max-width: 100%; /* Allow the iframe to take full width */
        height: 350px; /* Adjust iframe height on smaller screens */
    }

    .map a {
        font-size: 16px; /* Slightly smaller font size */
    }

    h1{
        font-size: 30px;
    }

    p{
        font-size: 16px;
    }
    ol li{
        font-size: 16px;
    }
}

@media (max-width: 1000px) {
    .sidebar{
        width: 80%;
    }

    p{
        font-size: 15px;
    }
}

@media (max-width: 800px) {
    h1{
        font-size: 25px;
    }

    p{
        font-size: 12px;
    }

    ol li{
        font-size: 12px;
    }
}

@media (max-width: 700px) {

    .map {
        width: 90%;
    }

    h1{
        font-size: 22px;
    }

    .content{
        display: block;
    }

    .left-content{
        width: 100%;
    }
    .right-content{
        width: 100%;
    }
}

@media (max-width: 600px) {
    h1{
        font-size: 18px;
    }
}

@media (max-width: 500px) {
    h1{
        font-size: 15px;
    }
}

